# voiceAI

./: LICENSE  README.md  app.py  pyproject.toml
static/: app.js
templates/: home.html  transcription.html
