[tool.poetry]
name = "repl-nix-voiceai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40.6"
whisper = "^1.1.10"
replit-ffmpeg = "0.4"
flask = "^3.0.3"
werkzeug = "^3.0.3"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
